Added two way compression

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 quarkus.http.limits.max-form-attribute-size=400M
 quarkus.http.limits.max-body-size=400M
+quarkus.http.enable-compression=true
+quarkus.http.enable-decompression=true
